# kb-firmware-modifier

./: Cargo.toml  README.md
assets/: tailwind.css
boards/: 45N2211.cfg.option
dev/: README.md
distutils/: build-linux.nu
docs/: README-ja.md  interface-overview.xml
examples/: Dvorak.json  Iritty.json  Swap-Fn-Ctrl.json  Thinkpad.json  X220.json  Zhy.json  __default__.json  curved_tp_speed.json  curved_tp_speed2.json  my.json  upper_shift.json
firmware/: convert.py  extract_tp_table.py  fw_fmt.asm.comment  fw_tmp.asm.comment  input.txt  input2.txt  input3.txt  output.txt  transform_vec.py
src/: main.rs
src/components/: buttons.rs  macro_key.rs  media_key.rs  messages.rs  mod.rs  selects.rs  sliders.rs  tp_speed_setting.rs
src/models/: mod.rs
src/utils/: config.rs  firmware.rs
template/: comments.txt  diff.json
